feat: quote email + previews + updater

--- a/src/index.html
+++ b/src/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width,initial-scale=1" />
     <title>GadgetBoy POS</title>
     <!-- Development CSP: relaxed for Vite HMR; tighten for production build -->
-    <meta http-equiv="Content-Security-Policy" content="default-src 'self'; script-src 'self' 'unsafe-inline' 'unsafe-eval' http://localhost:5173; style-src 'self' 'unsafe-inline'; img-src 'self' data:; connect-src 'self' http: https: ws: wss: http://localhost:5173 ws://localhost:5173;" />
+    <meta http-equiv="Content-Security-Policy" content="default-src 'self'; script-src 'self' 'unsafe-inline' 'unsafe-eval' http://localhost:5173; style-src 'self' 'unsafe-inline'; img-src 'self' data:; connect-src 'self' http: https: ws: wss: http://localhost:5173 ws://localhost:5173; frame-src 'self' blob:; child-src 'self' blob:;" />
   </head>
   <body class="dark">
     <div id="root"></div>
